--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   max-height: 350px;
   position: relative;
   padding: 20px;
+  overflow: auto;
 }
 
 .inputbox{
@@ -123,12 +124,12 @@ select{
 
 .courseCard{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 0.5fr;
   background-color:  rgb(255, 153, 0);
   max-width: 1150px;
   min-height: 80px ;
   border-radius: 15px;
-  margin: 0 auto;
+  margin: 8px auto;
   font-weight: bold;
   font-size: 24px;
   
@@ -138,4 +139,12 @@ select{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.button{
+  background-color: transparent;
+  color: whitesmoke;
+  border: 0ch;
+  cursor: pointer;
+  font-size: 24px;
 }
